--- a/LocMessApp/app/src/main/res/values/strings.xml
+++ b/LocMessApp/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="post">Post</string>
     <string name="cancel">Cancel</string>
 
+    <!-- Strings related to Profile -->
+    <string name="title_activity_profile">Profile</string>
+
 </resources>
