--- a/LocMessApp/app/src/main/res/values/strings.xml
+++ b/LocMessApp/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="login">Login</string>
     <string name="no_account_yet_create_one">No account yet? Create one</string>
     <string name="password">Password</string>
-    <string name="username">Username</string>
+    <string name="token">Username</string>
 
     <!-- Strings related to Create Post -->
     <string name="title_activity_create_post">New Post</string>
