Wifi Direct já liga

--- a/LocMessApp/app/src/main/res/values/strings.xml
+++ b/LocMessApp/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
         completions."
     </string>
 
+    <string name="port">10001</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="login">Login</string>
